<resources>
    <string name="app_name">MyFirstDatabase</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_title">My First Database</string>
    <string name="main_student_name">Student name</string>
    <string name="main_addStudent">Add Student</string>
    <string name="main_deleteEngStudents">Delete all engineering students</string>
    <string name="main_deleteAllStudents">DELETE ALL STUDENTS</string>
</resources>
